WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132706
REGRESSION (
r168053
): Phone number detection boxes are wrong when scrolled
https://bugs.webkit.org/show_bug.cgi?id=132706
Summary
REGRESSION (r168053): Phone number detection boxes are wrong when scrolled
Beth Dakin
Reported
2014-05-08 14:31:29 PDT
REGRESSION (
r168053
): Phone number detection boxes are wrong when scrolled <
rdar://problem/16787957
>
Attachments
Patch
(4.76 KB, patch)
2014-05-08 14:38 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-05-08 14:38:18 PDT
Created
attachment 231101
[details]
Patch
Beth Dakin
Comment 2
2014-05-08 15:30:08 PDT
Thanks Tim!
http://trac.webkit.org/changeset/168499
Darin Adler
Comment 3
2014-05-09 07:39:45 PDT
Comment on
attachment 231101
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231101&action=review
> Source/WebKit2/WebProcess/WebPage/mac/TelephoneNumberOverlayControllerMac.mm:66 > + size_t size = textQuads.size(); > + for (size_t i = 0; i < size; ++i) > + boundingRect.unite(textQuads[i].boundingBox());
Should use a modern for loop: for (auto& quad : textQuads) boundingRect.unit(quad.boundingBox());
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug